# chocolate-quake

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous_integration.yml
libs/: CMakeLists.txt
libs/ogg/: CMakeLists.txt
libs/vorbis/: CMakeLists.txt
libs/vorbis/lib/: CMakeLists.txt
src/: CMakeLists.txt  adivtab.h  bgmusic.c  bgmusic.h  bspfile.h  cl_input.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  cvar.c  cvar.h  d_fill.c  d_init.c  d_modech.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_vars.c  draw.c  host.c  host_cmd.c  in_sdl.c  input.h  keys.c  keys.h  main.c  mathlib.c  mathlib.h  menu.c  menu.h  model.c  net_loop.c  net_loop.h  net_vcr.c  (+38 more)
src/camera/: CMakeLists.txt  chase.c  view.c
src/camera/include/: view.h
src/client/: CMakeLists.txt  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c
src/client/include/: client.h
src/cmd/: CMakeLists.txt  cmd.c
src/cmd/include/: cmd.h
src/common/: CMakeLists.txt  com_string.c  common.c
src/common/include/: common.h  quakedef.h
src/console/: CMakeLists.txt  console.c  cvar.c
src/console/include/: console.h  cvar.h
src/crc/: CMakeLists.txt  crc.c
src/crc/include/: crc.h
src/end_screen/: CMakeLists.txt  es_buffer.c  es_buffer.h  es_font.c  es_font.h  es_main.c  es_palette.c  es_palette.h  es_time.c  es_time.h  es_window.c  es_window.h
src/end_screen/include/: end_screen.h
src/host/: CMakeLists.txt  host.c  host_cmd.c
src/host/include/: host.h
src/input/: CMakeLists.txt  in_gamepad.c  in_gamepad.h  in_keyboard.c  in_keyboard.h  in_main.c  in_mouse.c  in_mouse.h  keys.c
src/input/include/: input.h  keys.h
src/mathlib/: CMakeLists.txt  mathlib.c
src/mathlib/include/: mathlib.h
src/memory/: CMakeLists.txt  zone.c
src/memory/include/: zone.h
src/menu/: CMakeLists.txt  menu.c
src/menu/include/: menu.h
src/model/: CMakeLists.txt  model.c
src/model/include/: model.h  modelgen.h  spritegn.h
src/net/: CMakeLists.txt  net_dgrm.c  net_dgrm.h  net_drivers.c  net_loop.c  net_loop.h  net_main.c  net_none.c  net_poll.c  net_poll.h  net_socket.c  net_socket.h  net_udp.c  net_udp.h  net_vcr.c  net_vcr.h
src/net/include/: net.h  protocol.h
src/progs/: CMakeLists.txt  pr_cmds.c  pr_edict.c  pr_exec.c
src/progs/include/: pr_comp.h  progdefs.h  progs.h
src/renderer/: CMakeLists.txt  anorms.h  d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  nonintel.c  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_main.c  r_misc.c  r_part.c  r_sky.c  r_sprite.c  r_surf.c  r_vars.c
src/renderer/include/: d_iface.h  d_local.h  draw.h  r_local.h  r_shared.h  render.h
src/screen/: CMakeLists.txt  screen.c
src/screen/include/: screen.h
src/server/: CMakeLists.txt  sv_main.c  sv_move.c  sv_phys.c  sv_user.c  world.c
src/server/include/: server.h  world.h
src/sound/: CMakeLists.txt  bgmusic.c  snd_codec.c  snd_codec.h  snd_dma.c  snd_flac.c  snd_flac.h  snd_mem.c  snd_mix.c  snd_mp3.c  snd_mp3.h  snd_mp3tag.c  snd_sdl.c  snd_vorbis.c  snd_vorbis.h  snd_wave.c  snd_wave.h
src/sound/include/: bgmusic.h  sound.h
src/sound/src/: bgmusic.c  snd_dma.c
src/status_bar/: CMakeLists.txt  sbar.c
src/status_bar/include/: sbar.h
src/sys/: CMakeLists.txt  sys.c
src/sys/include/: sys.h
src/sys/src/: sys.c
src/video/: CMakeLists.txt  vid_buffers.c  vid_buffers.h  vid_main.c  vid_menu.c  vid_menu.h  vid_modes.c  vid_modes.h  vid_window.c  vid_window.h
src/video/include/: vid.h
src/wad/: CMakeLists.txt  wad.c
src/wad/include/: wad.h
